Fix spacing for subscribe form

--- a/html/stylesheets/src/elements/_subscribe.scss
+++ b/html/stylesheets/src/elements/_subscribe.scss
@@ -2,10 +2,19 @@
   margin-bottom: 1em;
 }
 
+.subscribe form{
+  margin-bottom: 0;
+}
+
 .subscribe fieldset{
   display: table-row;  
   width: 100%;
   margin-bottom: 0.5em;
+}
+
+.subscribe fieldset + p{
+  margin-top: 1em;
+  margin-bottom: 0;
 }
 
 .subscribe fieldset > div{
